syntax = "proto3";

option csharp_namespace = "grpcPrpjectTest.Protos";

import "google/api/annotations.proto";  // we use google library to make grpc service as http apis

package todo;

service Todo {
    // Create
    rpc CreateToDo(CreateToDoRequest) returns (CreateToDoResponse) {
        option (google.api.http) = {  
            post: "/v1/todo",
            body: "*"
        };
    }

    // Read single
    rpc ReadToDo(ReadToDoRequest) returns (ReadToDoResponse) {
        option (google.api.http) = {
            get: "/v1/todo/{id}"
        };
    }

    rpc StreamReadToDo(stream ReadToDoRequest) returns (ReadToDoResponse){
        option (google.api.http) = {
            get: "/v1/todo/{id}"
        };
    }


    // Read list
    rpc ListToDo(GetAllRequest) returns (GetAllResponse) {
        option (google.api.http) = {
            get: "/v1/todo"
        };
    }


    rpc streamListToDo(GetAllRequest) returns (stream ReadToDoResponse) {
        option (google.api.http) = {
            get: "/v1/streamtodo"
        };
    }


    // Update
    rpc UpdateToDo (UpdateToDoRequest) returns (UpdateToDoResponse) {
        option (google.api.http) = {
            put: "/v1/todo",
            body: "*"

        };
    }

    // Delete
    rpc DeleteToDo (DeleteToDoRequest) returns (DeleteToDoResponse) {
         option (google.api.http) = {
            delete: "/v1/todo/{id}",
        };
    }
}

message CreateToDoRequest {
    string title = 1;
    string description = 2;
}

message CreateToDoResponse {
    int32 id = 1;
}

message ReadToDoRequest {
    int32 id = 1;
}

message ReadToDoResponse {
    int32 id = 1;
    string title = 2;
    string description = 3;
    string to_do_status = 4;
}

message GetAllRequest {}

message GetAllResponse {
    repeated ReadToDoResponse to_do = 1;
}

message UpdateToDoRequest {
    int32 id = 1;
    string title = 2;
    string description = 3;
    string to_do_status = 4;
}
  
message UpdateToDoResponse {
    int32 id = 1;
}
  
message DeleteToDoRequest {
    int32 id = 1;
}
  
message DeleteToDoResponse {
    int32 id = 1;
}
